argocd/manifests/prod/infra/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app.kubernetes.io/name: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 5000 # app listens here
  # type: LoadBalancer # for debugging
